version: "dev"
opam-version: "2.0"
license: "ISC"
maintainer: "Joel Jakubovic"
authors: "Joel Jakubovic"
dev-repo: "git+https://github.com/jdjakub/ansi-parse.git"
homepage: "https://github.com/jdjakub/ansi-parse"
bug-reports: "https://github.com/jdjakub/ansi-parse/issues"
depends: [
  "ocaml"         { >= "4.03" }
  "dune"          { >= "2.9" }
  "angstrom"      { >= "0.15.0" }
  "ppx_deriving"  { >= "5.0" }
  "tyxml"         { >= "4.0" }
  "ppx_expect"    { >= "v0.14.1" & with-test }
  "odoc"          { >= "2.0.0" & with-doc }
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
doc: "https://jdjakub.github.io/ansi-parse/doc"
synopsis: "Ansiparse is a library for converting raw terminal output, replete with escape codes, into formatted HTML"
